--- a/Slot_Machine.ipynb
+++ b/Slot_Machine.ipynb
@@ -125,15 +125,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#deposit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def get_lines():\n",
     "    while True:\n",
     "        lines = input(\"Enter the number of lines to bet on (1- \" + str(MAX_LINES) + \")?\")\n",
@@ -166,15 +157,6 @@
     "        else:\n",
     "            print(\"Please enter a number.\")\n",
     "    return bet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#get_bet()"
    ]
   },
   {
@@ -225,17 +207,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a number.\n",
+      "Bet must be between $1 - $100\n",
+      "You have no money,  your balance is 1$\n",
+      "You have no money,  your balance is 1$\n",
+      "Please enter a number.\n",
+      "Please enter a number.\n",
+      "Please enter a number.\n"
+     ]
+    }
+   ],
    "source": [
     "main()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
